fix: Compress optimize tours request payload (#194)
- Add compression middleware to the backend
- Change optimize tours endpoint to accept either a JSON body or a gzip-compressed JSON file
- Compress optimize tours request bodies client-side in the frontend
- Upgrade backend dependencies
- Upgrade container image to Node 22
- Upgrade Terraform providers
- Increase Cloud Run memory limit
