# application/backend/app.ts
@@ -17,10 +17,9 @@ limitations under the License.
 import { promises as fs } from "fs";
 
 import bodyParser from "body-parser";
+import compression from "compression";
 import cors from "cors";
 import express, { Response, Request } from "express";
-import expressPinoLogger from "express-pino-logger";
-import multer from "multer";
 
 import { router as apiRoutes } from "./routes/api";
 import { router as optimizationRoutes } from "./routes/optimization";
@@ -30,14 +29,15 @@ import { log } from "./logging";
 export const app = express();
 
 // logging
-app.use(
-  expressPinoLogger({
-    logger: log,
-  })
-);
+app.use(log);
 
 // headers
 app.disable("x-powered-by");
+
+// compression
+app.use(
+  compression()
+);
 
 // cors
 app.use(
@@ -48,22 +48,15 @@ app.use(
   })
 );
 
-// multi-part form data
-app.use(
-  multer({
-    storage: multer.memoryStorage(),
-  }).single("file")
-);
-
 // body parser
-app.use(bodyParser.json({ limit: "50mb" }));
-app.use(bodyParser.urlencoded({ limit: "50mb", extended: true }));
+app.use(bodyParser.json({ limit: "1gb" }));
+app.use(bodyParser.urlencoded({ limit: "1gb", extended: true }));
 
 /**
  * Readiness/liveness probe
  */
 app.get("/healthz", async (req: Request, res: Response) => {
-  log.debug("Health check");
+  log.logger.debug("Health check");
   res.status(200).send("OK");
 });
 
@@ -76,13 +69,13 @@ app.get("/config.json", async (req: Request, res: Response) => {
   // get config.json from angular app when proxied
   if (process.env.FRONTEND_PROXY) {
     try {
-      const axios = (await import("axios")) as any;
+      const axios = (await import("axios") as any);
       const response = await axios.get(
         process.env.FRONTEND_PROXY + "config.json"
       );
       config = response.data;
     } catch (err) {
-      log.error(err);
+      log.logger.error(err);
     }
   }
 
@@ -92,7 +85,7 @@ app.get("/config.json", async (req: Request, res: Response) => {
       const data = await fs.readFile("public/config.json");
       config = JSON.parse(data.toString());
     } catch (err) {
-      log.error(err);
+      log.logger.error(err);
       return res.sendStatus(404);
     }
   }
@@ -122,7 +115,7 @@ app.get("/config.json", async (req: Request, res: Response) => {
 
     res.status(200).send(config);
   } catch (err) {
-    log.error(err);
+    log.logger.error(err);
     return res.sendStatus(500);
   }
 });
