# application/backend/routes/api.ts
@@ -21,9 +21,10 @@ export const router = express.Router();
 
 import { generateFileName, shortName, storage } from "../services/storage";
 import { log } from "../logging";
+import { GetFilesOptions } from "@google-cloud/storage";
 
 router.get("/healthz", async (req: Request, res: Response) => {
-  log.debug("Health check (API)");
+  log.logger.debug("Health check (API)");
   res.status(200).send("OK");
 });
 
@@ -44,7 +45,7 @@ router.get("/status/:date?/:name", async (req: Request, res: Response) => {
     req.params.name,
     req.params.date
   );
-  log.debug(fileName);
+  log.logger.debug(fileName);
 
   const status = (await storage.bucket.file(fileName).exists())[0];
   const result = {
@@ -61,14 +62,14 @@ router.get("/status/:date?/:name", async (req: Request, res: Response) => {
 router.get("/scenarios", async (req: Request, res: Response) => {
   const queryObject = url.parse(req.url, true).query;
 
-  const options: { [k: string]: any } = {};
+  const options: GetFilesOptions = {};
 
   if ("limit" in queryObject) {
     options.maxResults = parseInt(queryObject.limit as string);
     options.autoPaginate = false;
   }
   if ("pageToken" in queryObject) {
-    options.pageToken = queryObject.pageToken;
+    options.pageToken = queryObject.pageToken as string;
   }
 
   if ("startsWith" in queryObject) {
@@ -87,14 +88,14 @@ router.get("/scenarios", async (req: Request, res: Response) => {
 router.get("/solutions", async (req: Request, res: Response) => {
   const queryObject = url.parse(req.url, true).query;
 
-  const options: { [k: string]: any } = {};
+  const options: GetFilesOptions = {};
 
   if ("limit" in queryObject || "pageToken" in queryObject) {
     options.maxResults = parseInt(queryObject.limit as string);
     options.autoPaginate = true;
 
     if ("pageToken" in queryObject) {
-      options.pageToken = queryObject.pageToken;
+      options.pageToken = queryObject.pageToken as string;
     }
   }
 
@@ -173,7 +174,7 @@ router.post("/scenarios/:date?/:name", async (req: Request, res: Response) => {
       data: fileUrl,
     });
   } catch (error) {
-    log.error(error);
+    log.logger.error(error);
     return res.sendStatus(500);
   }
 });
@@ -198,7 +199,7 @@ router.post("/solutions/:date?/:name", async (req: Request, res: Response) => {
       data: fileUrl,
     });
   } catch (error) {
-    log.error(error);
+    log.logger.error(error);
     return res.sendStatus(500);
   }
 });
@@ -221,7 +222,7 @@ router.put("/scenarios/:date?/:name", async (req: Request, res: Response) => {
       data: fileUrl,
     });
   } catch (error) {
-    log.error(error);
+    log.logger.error(error);
     return res.sendStatus(500);
   }
 });
@@ -247,7 +248,7 @@ router.put("/solutions/:date?/:name", async (req: Request, res: Response) => {
       data: fileUrl,
     });
   } catch (error) {
-    log.error(error);
+    log.logger.error(error);
     return res.sendStatus(500);
   }
 });
